@@ -1,9 +1,9 @@
 Angle.pm
 Changes
-examples/ex1.pl
-examples/ex2.pl
-examples/ex3.pl
-examples/ex4.pl
+examples/angle_to_zodiac.pl
+examples/angle_to_zodiac_ascii_output.pl
+examples/angle_to_zodiac_explicit_second_with_round.pl
+examples/angle_to_zodiac_only_minute.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
