@@ -1,5 +1,6 @@
 0.05
  - Add angle2zodiac to SEE ALSO section in doc.
+ - Rename examples to better names.
  - Update copyright years.
 
 0.04 2020-10-20T11:33:17+02:00
